<resources>
    <string name="app_name">Llados Fitness</string>
    <string name="app_title">Llados Fitness Pro+</string>
    <string name="app_description">El éxito no se espera, se fabrica.</string>
    <string name="name">Nombre</string>
    <string name="t_name_input_hint">Amadeo Lladós Sánchez-Toscano</string>
    <string name="tv_weight_title">Peso</string>
    <string name="tv_weight_value">70</string>
    <string name="global_kg">kg</string>
    <string name="global_minus">-</string>
    <string name="global_plus">+</string>
    <string name="global_cm">cm</string>
    <string name="tv_height_title">Altura</string>
    <string name="tv_height_value">170</string>
    <string name="tv_height_min">1 cm</string>
    <string name="tv_height_max">250 cm</string>
    <string name="btn_calculate">Calcular</string>
    <string name="tv_result_title">Resultado</string>
    <string name="tv_result_bmi">...</string>
    <string name="default_name">Llados</string>
    <string name="result_comment">%1$s, %2$s</string>
    <string name="bmi_underweight">estás más seco que tu cuenta bancaria. Eres un mileurista, un pringado y un mediocre.</string>
    <string name="bmi_normal">estás normal. Y normal es para pringados. Compra mi nuevo curso por solo 999 €/mes y gana 100k al mes.</string>
    <string name="bmi_overweight">estás gordo. Puto fracasado. Levanta ese culo de mierda, puto perdedor.</string>
    <string name="bmi_obesity">no he visto ninguna panza más grande que la tuya. Solo tu peso tiene su propio campo gravitatorio y un poco más y te conviertes en un agujero negro de fracasos.</string>
</resources>