<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/app_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_title"
            app:layout_constraintStart_toStartOf="@+id/tv_app_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_app_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/t_name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/t_name_input_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_title"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_name"
            app:layout_constraintStart_toStartOf="@+id/cv_name"
            app:layout_constraintTop_toBottomOf="@+id/cv_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_weight_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_weight_title"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weight_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_weight_value"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_weight_minus"
                    app:layout_constraintStart_toStartOf="@+id/tv_weight_title"
                    app:layout_constraintTop_toTopOf="@+id/btn_weight_minus" />

                <TextView
                    android:id="@+id/tv_weight_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/global_kg"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight_value"
                    app:layout_constraintStart_toEndOf="@+id/tv_weight_value" />

                <Button
                    android:id="@+id/btn_weight_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/global_minus"
                    android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_weight_plus"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weight_title" />

                <Button
                    android:id="@+id/btn_weight_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/global_plus"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_weight_minus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_weight_minus" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_weight"
            app:layout_constraintStart_toStartOf="@+id/cv_weight"
            app:layout_constraintTop_toBottomOf="@+id/cv_weight">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_height_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_height_title"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_height_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_height_value"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_height_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_height_title" />

                <TextView
                    android:id="@+id/tv_height_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/global_cm"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_value"
                    app:layout_constraintStart_toEndOf="@+id/tv_height_value" />

                <SeekBar
                    android:id="@+id/sb_height_input"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:max="250"
                    android:minHeight="48dp"
                    android:progress="170"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_height_value"
                    app:layout_constraintTop_toBottomOf="@+id/tv_height_value" />

                <TextView
                    android:id="@+id/tv_height_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_height_min"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/sb_height_input"
                    app:layout_constraintTop_toBottomOf="@+id/sb_height_input" />

                <TextView
                    android:id="@+id/tv_height_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_height_max"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/sb_height_input"
                    app:layout_constraintTop_toBottomOf="@+id/sb_height_input" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_calculate"
            app:layout_constraintEnd_toEndOf="@+id/cv_height"
            app:layout_constraintStart_toStartOf="@+id/cv_height"
            app:layout_constraintTop_toBottomOf="@+id/cv_height" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_result"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_calculate"
            app:layout_constraintStart_toStartOf="@+id/btn_calculate"
            app:layout_constraintTop_toBottomOf="@+id/btn_calculate">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_result_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_result_title"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_result_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/tv_result_bmi"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_result_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_result_title" />

                <TextView
                    android:id="@+id/tv_result_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_result_bmi"
                    app:layout_constraintTop_toBottomOf="@+id/tv_result_bmi" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
